fix background no display on smaller screens

--- a/src/app/daily/daily.component.scss
+++ b/src/app/daily/daily.component.scss
@@ -1,3 +1,21 @@
+.body-day {
+  background: url("../../assets/svg/Pogoda-dzien.svg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.body-night {
+  background: url("../../assets/svg/Pogoda-noc.svg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .current-weather-div {
   display: flex;
   flex-direction: column;
